--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,6 +1,6 @@
 <h3>Satellite Count:</h3>
-<div class="counts">
-	<div>Total: <span class="counts-total">NaN</span></div>
+<div class="counts" *ngFor="let satellite of satellites">
+	<div *ngIf="satellite.type !== 'Space Debris'">Total: <span class="counts-total">{{satellites.countByType()}}</span></div>
 </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
