--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,6 +1,7 @@
 <h3>Satellite Count:</h3>
-<div class="counts" *ngFor="let satellite of satellites">
-	<div *ngIf="satellite.type !== 'Space Debris'">Total: <span class="counts-total">{{satellites.countByType()}}</span></div>
+<div class="counts">
+	<!--<div *ngFor = "let satellite of satellites">{{satellite.type}}: <span class="counts-total">{{countByType(satellite)}}</span></div>-->
+	<div>Total: <span class="counts-total">{{satellites.length}}</span></div>
 </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
