--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,7 +6,8 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr class="data-row" *ngFor="let satellite of satellites">
+    <tr class="data-row" *ngFor="let satellite of satellites" [class.stripe] = "(satellites.length/satellite % 2) === 0">
+        <!--stripe does not work-->
         <td>{{satellite.name}}</td>
         <td [class.warning] = "satellite.isSpaceDebris()">{{satellite.type}}</td>
         <td>{{satellite.operational}}</td>
